add fit to new structure

--- a/fit/CMakeLists.txt
+++ b/fit/CMakeLists.txt
@@ -1,31 +1,8 @@
-cmake_minimum_required(VERSION 3.16)
-project(cloud_fit)
 
-set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++17")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -pthread")
-
-if(NOT DEFINED CLOUD_FIT_VERSION)
-  set(CLOUD_FIT_VERSION_MAJOR 1)
-  set(CLOUD_FIT_VERSION_MINOR 0)
-  set(CLOUD_FIT_VERSION_PATCH 0)
-  set(CLOUD_FIT_VERSION ${CLOUD_FIT_VERSION_MAJOR}.${CLOUD_FIT_VERSION_MINOR}.${CLOUD_FIT_VERSION_PATCH})
-  set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/install/${PROJECT_NAME}-${CLOUD_FIT_VERSION})
-endif()
-
-find_package(PCL REQUIRED)
+set(module_name fit)
 find_package(Eigen3 REQUIRED)
+find_package(PCL REQUIRED)
+set(fit_include ${EIGEN3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
+set(fit_lib ${PCL_LIBRARIES})
 
-include_directories(
-  include
-  ${EIGEN3_INCLUDE_DIRS}
-  ${PCL_INCLUDE_DIRS}
-)
-
-include(cmake/cylinder.cmake)
-
-include(cmake/line.cmake)
-
-include(cmake/plane.cmake)
-
-include(cmake/install_files.cmake)
+compile_module(${module_name} "${fit_include}" "${fit_lib}")
