add segment to structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ function(get_functions module_directory function_names function_files)
     file(GLOB children RELATIVE "${module_directory}" "${module_directory}/*")
     set(function_directories "")
     foreach(child ${children})
-        if(IS_DIRECTORY "${module_directory}/${child}" AND NOT child STREQUAL "test" AND NOT child STREQUAL "cmake" AND NOT child STREQUAL "common")
+        if(IS_DIRECTORY "${module_directory}/${child}" AND NOT child STREQUAL "test" AND NOT child STREQUAL "cmake" AND NOT child STREQUAL "common" AND NOT child STREQUAL "docs")
             list(APPEND function_names_local "${child}")
             file(GLOB_RECURSE tmp_cpp_files "${module_directory}/${child}/*.cpp")
             list(APPEND function_files_local ${tmp_cpp_files})
@@ -53,11 +53,11 @@ function(compile_module module_name module_include module_lib)
 
     if(BUILD_TEST)
         foreach(function_name ${function_names})
-            add_executable(${function_name}_test test/${function_name}_test.cpp ${function_name}/${function_name}.cpp)
-            target_link_libraries(${function_name}_test ${module_lib} gtest gtest_main)
-            target_include_directories(${function_name}_test PUBLIC ./include ${module_include})
+            add_executable(${module_name}_${function_name}_test test/${function_name}_test.cpp ${function_name}/${function_name}.cpp)
+            target_link_libraries(${module_name}_${function_name}_test ${module_lib} gtest gtest_main)
+            target_include_directories(${module_name}_${function_name}_test PUBLIC ./include ${module_include})
             # Register test
-            add_test(NAME ${function_name}Test COMMAND ${function_name}_test)
+            add_test(NAME ${function_name}Test COMMAND ${module_name}_${function_name}_test)
         endforeach()
     endif()
 endfunction()
