--- a/segment/CMakeLists.txt
+++ b/segment/CMakeLists.txt
@@ -4,6 +4,6 @@ find_package(Eigen3 REQUIRED)
 find_package(PCL REQUIRED)
 find_package(OpenMP)
 set(segment_include ${EIGEN3_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
-set(segment_lib ${PCL_LIBRARIES})
+set(segment_lib ${PCL_LIBRARIES} OpenMP::OpenMP_CXX)
 
 compile_module(${module_name} "${segment_include}" "${segment_lib}")
