move code to modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,24 +17,31 @@ endif()
 
 enable_testing()
 
+set(modules_directory ${CMAKE_CURRENT_SOURCE_DIR}/modules)
+
 include_directories(
-  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${modules_directory}
 )
 
 function(get_functions module_directory function_names function_files)
 
     set(function_names_local "")
     set(function_files_local "")
-    file(GLOB children RELATIVE "${module_directory}" "${module_directory}/*")
+    file(GLOB functions RELATIVE "${module_directory}" "${module_directory}/*")
     set(function_directories "")
-    foreach(child ${children})
-        if(IS_DIRECTORY "${module_directory}/${child}" AND NOT child STREQUAL "test" AND NOT child STREQUAL "cmake" AND NOT child STREQUAL "common" AND NOT child STREQUAL "docs")
-            list(APPEND function_names_local "${child}")
-            file(GLOB_RECURSE tmp_cpp_files "${module_directory}/${child}/*.cpp")
-            list(APPEND function_files_local ${tmp_cpp_files})
+    foreach(function ${functions})
+        if(IS_DIRECTORY "${module_directory}/${function}" AND 
+           NOT function STREQUAL "test" AND 
+           NOT function STREQUAL "common" AND 
+           NOT function STREQUAL "docs")
+            # message(STATUS "${module_directory}: ${function}")
+            list(APPEND function_names_local "${function}")
+            file(GLOB_RECURSE temp_cpp_files "${module_directory}/${function}/*.cpp")
+            # message(STATUS "${module_directory}/${function} : ${temp_cpp_files}")
+            list(APPEND function_files_local ${temp_cpp_files})
         endif()
     endforeach()
-
+    # message(STATUS "${module_directory} : ${function_files_local}")
     set(function_names ${function_names_local} PARENT_SCOPE)
     set(function_files ${function_files_local} PARENT_SCOPE)
 
@@ -44,7 +51,7 @@ function(compile_module module_name module_include module_lib)
 
     set(function_names "")
     set(function_files "")
-    get_functions(${CMAKE_CURRENT_SOURCE_DIR} function_names function_files)
+    get_functions(${modules_directory}/${module_name} function_names function_files)
 
     add_library(${module_name} SHARED ${function_files})
     target_link_libraries(${module_name} ${module_lib})
@@ -54,7 +61,12 @@ function(compile_module module_name module_include module_lib)
 
     if(BUILD_TEST)
         foreach(function_name ${function_names})
-            add_executable(${module_name}_${function_name}_test test/${function_name}_test.cpp ${function_name}/${function_name}.cpp)
+            # message(WARNING "Compiling test for function: ${function_name} in module: ${module_name}")
+            message(STATUS "${modules_directory}/${module_name}/${function_name}")
+            file(GLOB_RECURSE function_cpp_files "${modules_directory}/${module_name}/${function_name}/*.cpp")
+            add_executable(${module_name}_${function_name}_test
+                           ${modules_directory}/${module_name}/test/${function_name}_test.cpp 
+                           ${function_cpp_files})
             target_link_libraries(${module_name}_${function_name}_test ${module_lib} gtest gtest_main)
             target_include_directories(${module_name}_${function_name}_test PUBLIC ./include ${module_include})
             # Register test
@@ -64,12 +76,12 @@ function(compile_module module_name module_include module_lib)
 
 endfunction()
 
-file(GLOB sub_elements RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")
+file(GLOB sub_elements RELATIVE "${modules_directory}" "${modules_directory}/*")
 set(module_directories "")
 foreach(sub_element ${sub_elements})
-    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${sub_element}" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${sub_element}/CMakeLists.txt")        
-        list(APPEND module_directories "${CMAKE_CURRENT_SOURCE_DIR}/${sub_element}")
-        add_subdirectory(${sub_element})
+    if(IS_DIRECTORY "${modules_directory}/${sub_element}" AND EXISTS "${modules_directory}/${sub_element}/CMakeLists.txt")        
+        list(APPEND module_directories "${modules_directory}/${sub_element}")
+        add_subdirectory("${modules_directory}/${sub_element}")
     endif()
 endforeach()
 
